# ai_harvard_course

./: .gitignore  pyproject.toml
attention/: analysis.md  mask.py
course/docs/: 0_Search.md  1_Knowledge.md  2_Uncertainty.md  3_Optimization.md  4_Learning.md  5_Neural_Networks.md  6_Language.md
course/src/: clue.py
course/src0/: maze.py
course/src2/bayesnet/: model.py
course/src3/hospitals/: hospitals.py
course/src4/banknotes/: banknotes0.py
course/src5/banknotes/: banknotes.py
course/src6/cfg/: cfg2.py
course/src6/ngrams/: ngrams.py
course/src6/ngrams/holmes/: test.txt
course/src6/sentiment/: sentiment.py
course/src6/vectors/: vectors.py
crossword/: generate.py
degrees/: degrees.py  test.py
heredity/: heredity.py
knights/: puzzle.py
minesweeper/: minesweeper.py
nim/: nim.py
pagerank/: pagerank.py
parser/: parser.py
shopping/: shopping.py
tictactoe/: tictactoe.py
traffic/: README.md  traffic.py
